# zhenqigui

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  xuqiu.txt
.github/workflows/: release.yml
scripts/: setup-ffmpeg.ps1
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  ffmpeg.json
src-tauri/permissions/: read-videos.json
src-tauri/src/: drag.rs  lib.rs
src-tauri/src/commands/: ai.rs  app.rs  audio.rs  common.rs  files.rs  media.rs  mod.rs  movie.rs  registry.rs  tmdb.rs  usn.rs  whisper.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: mod.rs  tmdb.rs
src/components/: ErrorBoundary.tsx  customtitlebar.tsx  localimage.tsx  matchdetail.tsx  movieeditmodal.tsx  tmdbsearchmodal.tsx
src/components/tools/: audioextractor.tsx  audioprocessor.tsx  filerenamer.tsx  mediainfo.tsx  stemseparator.tsx  subtitleconverter.tsx  subtitletool.tsx  transcoder.tsx  whisper.tsx
src/context/: appcontext.tsx
src/layouts/: mainlayout.tsx
src/pages/: MovieDetails.tsx  calendarpage.tsx  home.tsx  materialmatch.tsx  settings.tsx  statistics.tsx  tools.tsx
src/services/: api.ts
src/types/: index.ts
src/utils/: format.ts
