[package]
name = "tauri-app"
version = "1.0.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
percent-encoding = "2.3"
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1.10"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.26", features = ["json", "blocking", "socks"] }
anyhow = "1.0.100"
dirs = "6.0.0"
walkdir = "2.5"
strsim = "0.11"
base64 = "0.22.1"
mime_guess = "2.0.5"
chrono = "0.4"
winreg = "0.55.0"
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_System_Com_StructuredStorage",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "implement",
] }
windows-core = "0.52.0"
usn-journal-rs = "0.4.0"


